--- a/spices/cix-iputils.org
+++ b/spices/cix-iputils.org
@@ -1,24 +1,26 @@
-<!--
-File          : iputils.md
+# File           : cix-iputils.org
+# Created        : <2015-11-16 Mon 00:31:15 GMT>
+# Last Modified  : <2016-11-07 Mon 23:03:50 GMT> sharlatan
+# Author         : sharlatan
+# Maintainer(s)  :
+# Short          :
 
-Created       : Mon 16 Nov 2015 00:31:15
-Last Modified : Tue Jun 07 2016 23:28:59 sharlatan
-Maintainer    : sharlatan
--->
+#+OPTIONS: num:nil
 
-[[≣](../README.md#Index "Index")]
+[[file:../README.md::*Index][|≣|]]
 [[↷](http://www.skbuff.net/iputils/)]
+#+TITLE: IPutils
 
-IPutils
--------
-|     |     |
-| --- | --- |
-| __Author__ | Alexey Kuznetsov |
-| __Maintainers__ | |
-| __Realised__ | 2006 |
-| __Source__ | [iputils](https://github.com/iputils/iputils) |
-***
+|-------------+------------------|
+| *Author*      | Alexey Kuznetsov |
+| *Maintainers* |                  |
+| *Realised*    | 2006             |
+| *Source*      | [[https://github.com/iputils/iputils][git: iputils]]     |
+|-------------+------------------|
+-----
 
+** Index
+#+BEGIN_EXAMPLE
     arping               -
     clockdiff (8)        - measure clock difference between hosts
     ipg                  -
@@ -30,6 +32,7 @@ IPutils
     tracepath (8)        - traces path to a network host discovering MTU along
     tracepath6 (8)       - traces path to a network host discovering MTU along
     traceroute6 (8)      - print the route packets trace to network host
+#+END_EXAMPLE
 
-# Referance
+** Referance
 - Linuxfoundation: iputils http://www.linuxfoundation.org/collaborate/workgroups/networking/iputils
