--- a/spices/cix-moreutils.org
+++ b/spices/cix-moreutils.org
@@ -1,12 +1,13 @@
 # File           : cix-moreutils.org
 # Created        : <2016-11-07 Mon 22:33:39 GMT>
-# Last Modified  : <2016-11-07 Mon 22:34:07 GMT> sharlatan
+# Last Modified  : <2016-11-08 Tue 23:18:46 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
 
 #+OPTIONS: num:nil
 
+[[file:../README.org::*Index][|≣|]]
 #+TITLE: Moreutils
 
 ** Index
