--- a/spices/cix-netkit.org
+++ b/spices/cix-netkit.org
@@ -1,50 +1,53 @@
-<!--
-File          : netkit.md
+# File           : cix-netkit.org
+# Created        : <2015-11-16 Mon 23:35:17 GMT>
+# Last Modified  : <2016-11-08 Tue 22:43:40 GMT> sharlatan
+# Author         : sharlatan
+# Maintainer(s)  :
+# Short          :
 
-Created       : Mon 16 Nov 2015 00:06:08
-Last Modified : Sat 21 Nov 2015 20:42:29
-Maintainer    : sharlatan
--->
+#+OPTIONS: num:nil
 
-[[≣](../README.md#Index "Index")]
-# Netkit [↷](http://wiki.netkit.org/index.php/Main_Page) #
-_environment for setting up and performing networking experiments_
+ [↷](http://wiki.netkit.org/index.php/Main_Page) #
+#+TITLE: Netkit
+/environment for setting up and performing networking experiments/
 
-       biff           - control program for comsat
-       comsat         - daemon for asynchronous new mail notification
-       fingerd        - daemon for remote finger access
-       finger         - program for printing user information
-       ftp            - client program for the ftp protocol.
-       ftpd           - daemon for the ftp protocol.
-       inetd          - internet "super-server" daemon forker
-       ping           - standard network testing program
-       rcp            - remote copy program using rsh
-       rexecd         - daemon for rexec connections
-       rexec          - password-based remote execution program
-       ripquery       - query program for routed
-       rlogind        - daemon for rlogin connections
-       rlogin         - remote login program
-       routed         - rIP-based routing daemon
-       rpc.bootparamd - net-boot support daemon.
-       rpcgen         - sunRPC code generator
-       rpcinfo        - sunRPC diagnostic program
-       rpc.rusersd    - daemon to return data for rwho/ruptime
-       rpc.rwalld     - daemon for receiving remote write-alls.
-       rshd           - daemon for rsh connections
-       rsh            - non-password-based remote execution program
-       rup            - program to print LAN uptimes
-       ruptime        - program to print LAN uptimes
-       rusers         - program to print current LAN user logins
-       rwall          - remote write-all program.
-       rwhod          - daemon to maintain data for rwho/ruptime
-       rwho           - program to print current LAN user logins
-       talkd          - daemon to help set up talk sessions.
-       talk           - program for chatting with another user elsewhere.
-       telnet         - Client for telnet protocol
-       telnetd        - Daemon for telnet protocol
-       tftpd          - Trivial File Transfer Protocol daemon
-       tftp           - Trivial File Transfer Protocol client
-       timedc         - Client for time daemon
-       timed          - Time daemon
-       writed         - Daemon for receiving write messages from other hosts
-       write          - Program for quick messages to other people (net-aware) 
+#+BEGIN_EXAMPLE
+     biff           - control program for comsat
+     comsat         - daemon for asynchronous new mail notification
+     fingerd        - daemon for remote finger access
+     finger         - program for printing user information
+     ftp            - client program for the ftp protocol.
+     ftpd           - daemon for the ftp protocol.
+     inetd          - internet "super-server" daemon forker
+     ping           - standard network testing program
+     rcp            - remote copy program using rsh
+     rexecd         - daemon for rexec connections
+     rexec          - password-based remote execution program
+     ripquery       - query program for routed
+     rlogind        - daemon for rlogin connections
+     rlogin         - remote login program
+     routed         - rIP-based routing daemon
+     rpc.bootparamd - net-boot support daemon.
+     rpcgen         - sunRPC code generator
+     rpcinfo        - sunRPC diagnostic program
+     rpc.rusersd    - daemon to return data for rwho/ruptime
+     rpc.rwalld     - daemon for receiving remote write-alls.
+     rshd           - daemon for rsh connections
+     rsh            - non-password-based remote execution program
+     rup            - program to print LAN uptimes
+     ruptime        - program to print LAN uptimes
+     rusers         - program to print current LAN user logins
+     rwall          - remote write-all program.
+     rwhod          - daemon to maintain data for rwho/ruptime
+     rwho           - program to print current LAN user logins
+     talkd          - daemon to help set up talk sessions.
+     talk           - program for chatting with another user elsewhere.
+     telnet         - Client for telnet protocol
+     telnetd        - Daemon for telnet protocol
+     tftpd          - Trivial File Transfer Protocol daemon
+     tftp           - Trivial File Transfer Protocol client
+     timedc         - Client for time daemon
+     timed          - Time daemon
+     writed         - Daemon for receiving write messages from other hosts
+     write          - Program for quick messages to other people (net-aware)
+#+END_EXAMPLE
