--- a/spices/cix-sed.org
+++ b/spices/cix-sed.org
@@ -1,8 +1,15 @@
 # File           : cix-sed.org
 # Created        : <2016-11-04 Fri 22:49:14 GMT>
-# Last Modified  : <2016-11-04 Fri 22:49:15 GMT> sharlatan
+# Last Modified  : <2016-11-07 Mon 21:45:31 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
 
 #+OPTIONS: num:nil
+
+#+TITLE: SED
+
+** sed: options
+** sed: examples
+** sed: see-also
+   awk(1), ed(1), grep(1), tr(1), perlre(1)
