--- a/spices/cix-gawk.org
+++ b/spices/cix-gawk.org
@@ -1,7 +1,33 @@
 # File          : gnu-core-utilities.md
 # Created       : <2016-11-04 Fri 22:15:18 GMT>
-# Last Modified : <2016-11-04 Fri 22:15:24 GMT> sharlatan
+# Last Modified : <2016-11-07 Mon 22:24:41 GMT> sharlatan
 # Author        : sharlatan
 # Maintainer    :
 
 #+OPTIONS: num:nil
+
+#+TITLE: AWK
+/gawk/
+
+** Index
+#+BEGIN_EXAMPLE
+    awk (1)              - pattern scanning and pr    ocessing language
+    awk (1p)             - pattern scanning and processing language
+    gawk (1)             - pattern scanning and processing language
+    igawk (1)            - gawk with include files
+#+END_EXAMPLE
+
+** Commans
+
+*** awk
+**** awk: options
+**** awk: examples
+- awk-161107213903 :: sort text by the length of lines.
+#+BEGIN_SRC sh
+    $: FILE_NAME="/path/to/your/file"
+    $: awk '{print length, $0;}' "$FILE_NAME"| sort -n | grep -oP "(?<=\s).+"
+#+END_SRC
+**** awk: files
+**** awk: see-also
+     egrep(1), sed(1), getpid(2), getppid(2), getpgrp(2), getuid(2), geteuid(2),
+     getgid(2), getegid(2), getgroups(2), usleep(3)
