--- a/spices/cix-gnu-inetutils.org
+++ b/spices/cix-gnu-inetutils.org
@@ -1,4 +1,12 @@
-<!--
+# File           : cix-gnu-inetutils.org
+# Created        : <2016-11-07 Mon 23:34:03 GMT>
+# Last Modified  : <2016-11-07 Mon 23:34:05 GMT> sharlatan
+# Author         : sharlatan
+# Maintainer(s)  :
+# Short          :
+
+#+OPTIONS: num:nil
+
 File          : gnu-inetutils.md
 
 Created       : Wed 18 Nov 2015 21:20:07
