--- a/spices/cix-lsof.org
+++ b/spices/cix-lsof.org
@@ -1,6 +1,6 @@
 # File           : cix-lsof.org
 # Created        : <2016-11-05 Sat 23:22:08 GMT>
-# Last Modified  : <2016-11-06 Sun 00:36:03 GMT> sharlatan
+# Last Modified  : <2016-11-06 Sun 01:03:40 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
@@ -21,12 +21,12 @@
 *** lsof: examples
 - lsoff-161105232800 :: If there are a lot of files you are trying to search in,
      *lsof* helps to watch a directory which *find* working on.
-#+BEGIN_SRC shell
+#+BEGIN_SRC sh
     #: lsof -Fn -a -c find -d cwd +r 10
 #+END_SRC
 
 - lsoff-161106001559 :: List of open port/connections, main option *-i*
-#+BEGIN_SRC shell
+#+BEGIN_SRC sh
     #: lsoff -i -P -n       # All open connections
     #: lsoff -i -a -p 1234  # All connections with PID=1234
     #: lsoff -i tcp:80      # Process licenning port 80
